added post deletion

--- a/blogs/templates/blogs/base.html
+++ b/blogs/templates/blogs/base.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'blogs:index' %}">Blog</a>
+              <a class="nav-link" href="{% url 'blogs:list_all' %}">All Posts</a>
             </li>
           </ul>
           <ul class="navbar-nav ml-auto">
