--- a/blogs/templates/blogs/index.html
+++ b/blogs/templates/blogs/index.html
@@ -1,8 +1,8 @@
 {% extends 'blogs/base.html' %}
 {% block page_header %}
-    <h2>blog > posts <small><a href="{% url 'blogs:new_post' %}">new post</a></small></h2>
+    <h2>Simple blogs</h2>
 {% endblock page_header %}
 
 {% block content %}
-{% include 'blogs/listposts.html' %}
+<p>This is a simple blogs app</p>
 {% endblock content %}
